# hl-tidy-ext

./: .clang-tidy  CMakeLists.txt  README.md
src/: HlTidyModule.cpp  HlTidyModule.h
src/checks/: AvoidCoutCerrCheck.cpp  AvoidCoutCerrCheck.h  AvoidDynamicCastCheck.cpp  AvoidDynamicCastCheck.h  AvoidStdAnyCheck.cpp  AvoidStdAnyCheck.h  AvoidStdBindCheck.cpp  AvoidStdBindCheck.h  AvoidStdEndlCheck.cpp  AvoidStdEndlCheck.h  AvoidStdFunctionCheck.cpp  AvoidStdFunctionCheck.h  AvoidStdRegexCheck.cpp  AvoidStdRegexCheck.h  AvoidVirtualInLoopCheck.cpp  AvoidVirtualInLoopCheck.h  PreferContainsCheck.cpp  PreferContainsCheck.h  PreferCopyableFunctionCheck.cpp  PreferCopyableFunctionCheck.h  PreferEmplaceCheck.cpp  PreferEmplaceCheck.h  PreferEraseIfCheck.cpp  PreferEraseIfCheck.h  PreferExpectedCheck.cpp  PreferExpectedCheck.h  PreferFlatContainersCheck.cpp  PreferFlatContainersCheck.h  PreferFormatCheck.cpp  PreferFormatCheck.h  PreferFromCharsCheck.cpp  PreferFromCharsCheck.h  PreferFunctionRefCheck.cpp  PreferFunctionRefCheck.h  PreferHiveCheck.cpp  PreferHiveCheck.h  PreferInplaceVectorCheck.cpp  PreferInplaceVectorCheck.h  PreferJthreadCheck.cpp  PreferJthreadCheck.h  (+22 more)
src/utils/: CppStandardUtils.h  DiagnosticHelper.h
test/: CMakeLists.txt  example_service.cpp  lit.cfg.py.in  test_avoid_std_endl.cpp  test_avoid_std_function.cpp  test_avoid_std_regex.cpp  test_cpp20_checks.cpp  test_cpp20_new_checks.cpp  test_cpp23_checks.cpp  test_cpp23_new_checks.cpp  test_new_checks.cpp  test_prefer_from_chars.cpp  test_prefer_reserve.cpp  test_prefer_string_view.cpp  test_prefer_vector.cpp
